FINALLY got my about page to wrap properly - container around both articles and buttons - validated

--- a/about-v2.html
+++ b/about-v2.html
@@ -65,62 +65,66 @@
                 <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
             </figure>
 
-            <article class="card article">
-                <h2>About me</h2>
-                <p>
-                    <em>Hey there!</em>
-                    I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
-                    Dandenong Ranges in Melbourne, Victoria. As a student of Web Development at Coder Academy I
-                    spend most of my time learning and practising code, sharpening my problem solving skills and
-                    learning more about the world of tech.
-                    <br>
-                    My adventure into the world of coding may not have started long ago, however I've already
-                    learned an immense amount of valuable practical lessons and industry specific knowledge. Below
-                    are some of the tools and skills I've learned so far:
-                </p>
-                <section class="card-lists">
-                    <div>
-                        <h3>Languages</h3>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>SCSS</li>
-                            <li>Bash/ZSH</li>
-                            <li>Python</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Software</h3>
-                        <ul>
-                            <li>Visual Studio Code</li>
-                            <li>Git</li>
-                            <li>Github</li>
-                            <li>Balsamiq</li>
-                            <li>Trello</li>
-                            <li>CLI</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Workflow</h3>
-                        <ul>
-                            <li>Agile Project Management</li>
-                            <li>Kanban board</li>
-                            <li>Wireframes</li>
-                            <li>CSS / HTML Validators</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Principles</h3>
-                        <ul>
-                            <li>Semantic HTML</li>
-                            <li>Mobile-first design</li>
-                            <li>Responsive layouts</li>
-                            <li>Basic UI</li>
-                        </ul>
+            <div class="cont">
+                <article class="card article">
+                    <h2>About me</h2>
+                    <p>
+                        <em>Hey there!</em>
+                        I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
+                        Dandenong Ranges in Melbourne, Victoria. As a student of Web Development at Coder Academy I
+                        spend most of my time learning and practising code, sharpening my problem solving skills and
+                        learning more about the world of tech.
+                        <br>
+                        My adventure into the world of coding may not have started long ago, however I've already
+                        learned an immense amount of valuable practical lessons and industry specific knowledge. Below
+                        are some of the tools and skills I've learned so far:
+                    </p>
+                </article>
+
+                <section class="card article">
+                    <div class="card-lists">
+                        <div>
+                            <h3>Languages</h3>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>SCSS</li>
+                                <li>Bash/ZSH</li>
+                                <li>Python</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Software</h3>
+                            <ul>
+                                <li>Visual Studio Code</li>
+                                <li>Git</li>
+                                <li>Github</li>
+                                <li>Balsamiq</li>
+                                <li>Trello</li>
+                                <li>CLI</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Workflow</h3>
+                            <ul>
+                                <li>Agile Project Management</li>
+                                <li>Kanban board</li>
+                                <li>Wireframes</li>
+                                <li>CSS / HTML Validators</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Principles</h3>
+                            <ul>
+                                <li>Semantic HTML</li>
+                                <li>Mobile-first design</li>
+                                <li>Responsive layouts</li>
+                                <li>Basic UI</li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
-
-                <div class="container">
+                <div class="wide-cont">
                     <form action="./code.html">
                         <input type="submit" value="Code" class="button" />
                     </form>
@@ -128,7 +132,7 @@
                         <input type="submit" value="Resume" class="button" />
                     </form>
                 </div>
-            </article>
+            </div>
         </section>
     </main>
     <footer>
