--- a/journal-v2.html
+++ b/journal-v2.html
@@ -64,7 +64,7 @@
             <h2 id="page-sub">journal</h2>
 
             <!-- PAGE CONTENTS DROPDOWN -->
-            <div class="container">
+            <div class="wide-cont">
                 <section class="dropdown-cont">
                     <label for="dropdown-check" class="dropdown-icon">
                         <a>contents</a>
