--- a/personal-v2.html
+++ b/personal-v2.html
@@ -64,7 +64,7 @@
             <h2 id="page-sub">personal</h2>
 
             <!-- PAGE CONTENTS DROPDOWN -->
-            <div class="container">
+            <div class="wide-cont">
                 <section class="dropdown-cont">
                     <label for="dropdown-check" class="dropdown-icon">
                         <a>contents</a>
@@ -84,7 +84,7 @@
                     <a id="anchor-card1"></a>
                 </label>
                 <input type="checkbox" id="expand-check1" />
-                <article class="expand" id="card1">
+                <article id="card1">
                     <h2>Music</h2>
                     <p>
                         Where would the world be without music? It has guided me, comforted me, driven me and has
@@ -133,9 +133,9 @@
                         </li>
                     </ul>
 
-                    <form action="./music.html">
+                    <!-- <form action="./music.html">
                         <input type="submit" value="My favourite albums" class="button" />
-                    </form>
+                    </form> -->
                 </article>
             </div>
 
@@ -159,20 +159,10 @@
                         euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
                         ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
                         Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
-
-                        Suspendisse laoreet venenatis eros, eget tristique eros suscipit et. Fusce ultrices dapibus
-                        tristique. Duis dolor justo, sollicitudin at rutrum nec, rutrum ac lorem. Aenean vitae nisl id
-                        urna suscipit tincidunt. In sodales dui et sapien euismod pretium. Aliquam molestie enim at
-                        ultrices cursus. Nam pulvinar odio vel orci imperdiet auctor. Vivamus at massa scelerisque,
-                        volutpat dolor eu, sollicitudin lacus. Cras tempor enim mi, a eleifend nisi dignissim id. Fusce
-                        massa ex, tristique vel dui et, pellentesque fringilla orci. Donec leo libero, mollis vitae
-                        lobortis nec, ultrices id libero. Praesent tincidunt metus id sem blandit, ut suscipit est
-                        rhoncus. Nam imperdiet congue sapien, imperdiet vehicula mi sagittis at. Donec vel purus
-                        fermentum justo facilisis vehicula et in dolor.
                     </p>
 
-                    <form action="./music.html">
-                        <input type="submit" value="My favourite albums" class="button" />
+                    <form action="./photography.html">
+                        <input type="submit" value="Image gallery" class="button" />
                     </form>
                 </article>
             </div>
