--- a/contact-v2.html
+++ b/contact-v2.html
@@ -72,7 +72,7 @@
                 <p>04-666-518-20</p>
             </article>
 
-            <div class="container">
+            <div class="wide-cont">
                 <a href="https://github.com/Lanruoj" target="_blank">
                     <img class="logo" src="./img/github.png" alt="Github" />
                 </a>
