--- a/resume-v2.html
+++ b/resume-v2.html
@@ -66,7 +66,7 @@
                 <iframe src="./img/resume-template.pdf"></iframe>
             </article>
 
-            <div class="container">
+            <div class="wide-cont">
                 <a class="button" href="./img/resume-template.pdf" download>
                     Download
                 </a>
