--- a/personal-v2.html
+++ b/personal-v2.html
@@ -65,7 +65,7 @@
 
             <!-- PAGE CONTENTS DROPDOWN -->
             <div class="wide-cont">
-                <section class="dropdown-cont">
+                <div class="dropdown-cont">
                     <label for="dropdown-check" class="dropdown-icon">
                         <a>contents</a>
                         <br>
@@ -76,95 +76,128 @@
                         <li><a href="#anchor-card1">Music</a></li>
                         <li><a href="#anchor-card2">Photography</a></li>
                     </ul>
-                </section>
+                </div>
             </div>
 
-            <div class="card modular">
-                <label for="expand-check1" class="expand-icon">+/-
-                    <a id="anchor-card1"></a>
-                </label>
-                <input type="checkbox" id="expand-check1" />
-                <article id="card1">
-                    <h2>Music</h2>
-                    <p>
-                        Where would the world be without music? It has guided me, comforted me, driven me and has
-                        been the soundtrack to my inner cinema for as long as I can remember. Music is a force
-                        within my life that has likely had the most profound effect on shaping who I am and how I
-                        feel. Ever since I discovered my sister's "alternative" music collection in early
-                        highschool, I've been continually exploring and discovering new music and sharing it to
-                        whoever would listen (not many, as it turns out).
-                    </p>
-                    <ul>
-                        <li>
-                            <h3>Stolen Violin, <i>Temperate Touch, Tropical Tears (2013)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a3417893724_16.jpg" alt="Stolen Violin">
-                        </li>
-                        <li>
-                            <h3>King Krule, <i>Man Alive! (2020)</i></h3>
-                            <img src="https://media.pitchfork.com/photos/5e4d5209f98c800008cf6620/1:1/w_600/King-Krule-Man-Alive.jpg"
-                                alt="King Krule">
-                        </li>
-                        <li>
-                            <h3>Jordan Ireland With Purple Orchestra, <i>Jordan Ireland With Purple Orchestra
-                                    (2017)</i>
-                            </h3>
-                            <img src="https://f4.bcbits.com/img/a0618251442_10.jpg" alt="Jordan Ireland">
-                        </li>
-                        <li>
-                            <h3>Arthur Russell, <i>World of Echo (1986)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a4051912074_10.jpg" alt="Arthur Russell">
-                        </li>
-                        <li>
-                            <h3>Sunbeam Sound Machine, <i>Wonderer (2014)</i></h3>
-                            <img src="https://i.scdn.co/image/ab67616d0000b27305be4a82babc6e7a5199525e"
-                                alt="Sunbeam Sound Machine">
-                        </li>
-                        <li>
-                            <h3>Amen Dunes, <i>Love (2014)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a3223571064_10.jpg" alt="Amen Dunes">
-                        </li>
-                        <li>
-                            <h3>Connan Mockasin, <i>Forever Dolphin Love (2011)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a0303691458_10.jpg" alt="Connan Mockasin">
-                        </li>
-                        <li>
-                            <h3>Soda Eaves, <i>Murray, Darling (2016)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a3774274208_10.jpg" alt="Soda Eaves">
-                        </li>
-                    </ul>
+            <div class="column">
+                <div class="card modular">
+                    <label for="expand-check1" class="expand-icon">+/-
+                        <a id="anchor-card1"></a>
+                    </label>
+                    <input type="checkbox" id="expand-check1" />
+                    <article id="card1">
+                        <h2>Music</h2>
+                        <p>
+                            Where would the world be without music? It has guided me, comforted me, driven me and has
+                            been the soundtrack to my inner cinema for as long as I can remember. Music is a force
+                            within my life that has likely had the most profound effect on shaping who I am and how I
+                            feel. Ever since I discovered my sister's "alternative" music collection in early
+                            highschool, I've been continually exploring and discovering new music and sharing it to
+                            whoever would listen (not many, as it turns out).
+                        </p>
+                        <ul>
+                            <li>
+                                <h3>Stolen Violin, <i>Temperate Touch, Tropical Tears (2013)</i></h3>
+                                <img src="https://f4.bcbits.com/img/a3417893724_16.jpg" alt="Stolen Violin">
+                            </li>
+                            <li>
+                                <h3>King Krule, <i>Man Alive! (2020)</i></h3>
+                                <img src="https://media.pitchfork.com/photos/5e4d5209f98c800008cf6620/1:1/w_600/King-Krule-Man-Alive.jpg"
+                                    alt="King Krule">
+                            </li>
+                            <li>
+                                <h3>Jordan Ireland With Purple Orchestra, <i>Jordan Ireland With Purple Orchestra
+                                        (2017)</i>
+                                </h3>
+                                <img src="https://f4.bcbits.com/img/a0618251442_10.jpg" alt="Jordan Ireland">
+                            </li>
+                            <li>
+                                <h3>Arthur Russell, <i>World of Echo (1986)</i></h3>
+                                <img src="https://f4.bcbits.com/img/a4051912074_10.jpg" alt="Arthur Russell">
+                            </li>
+                            <li>
+                                <h3>Sunbeam Sound Machine, <i>Wonderer (2014)</i></h3>
+                                <img src="https://i.scdn.co/image/ab67616d0000b27305be4a82babc6e7a5199525e"
+                                    alt="Sunbeam Sound Machine">
+                            </li>
+                            <li>
+                                <h3>Amen Dunes, <i>Love (2014)</i></h3>
+                                <img src="https://f4.bcbits.com/img/a3223571064_10.jpg" alt="Amen Dunes">
+                            </li>
+                            <li>
+                                <h3>Connan Mockasin, <i>Forever Dolphin Love (2011)</i></h3>
+                                <img src="https://f4.bcbits.com/img/a0303691458_10.jpg" alt="Connan Mockasin">
+                            </li>
+                            <li>
+                                <h3>Soda Eaves, <i>Murray, Darling (2016)</i></h3>
+                                <img src="https://f4.bcbits.com/img/a3774274208_10.jpg" alt="Soda Eaves">
+                            </li>
+                        </ul>
 
-                    <!-- <form action="./music.html">
+                        <!-- <form action="./music.html">
                         <input type="submit" value="My favourite albums" class="button" />
                     </form> -->
-                </article>
+                    </article>
+                </div>
             </div>
 
-            <div class="card modular">
-                <label for="expand-check2" class="expand-icon">+/-
-                    <a id="anchor-card2"></a>
-                </label>
-                <input type="checkbox" id="expand-check2" />
-                <article class="expand" id="card2">
-                    <h2>Photography</h2>
-                    <p>
-                        I began my journey into photography as a young teenager who was drawn to the way certain
-                        objects, spaces or light met my eyes. I've always been enamoured by the ability that cameras
-                        have to capture moments in time.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
-                        interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue auctor, at
-                        aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
-                        Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
-                        euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
-                        ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
-                        Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
-                    </p>
+            <div class="column">
+                <div class="card modular">
+                    <label for="expand-check2" class="expand-icon">+/-
+                        <a id="anchor-card2"></a>
+                    </label>
+                    <input type="checkbox" id="expand-check2" />
+                    <article class="expand" id="card2">
+                        <h2>Photography</h2>
+                        <p>
+                            I began my journey into photography as a young teenager who was drawn to the way certain
+                            objects, spaces or light met my eyes. I've always been enamoured by the ability that cameras
+                            have to capture moments in time.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
+                            interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue
+                            auctor, at
+                            aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
+                            Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
+                            euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
+                            ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
+                            Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
+                        </p>
 
-                    <form action="./photography.html">
-                        <input type="submit" value="Image gallery" class="button" />
-                    </form>
-                </article>
+                        <form action="./photography.html">
+                            <input type="submit" value="Image gallery" class="button" />
+                        </form>
+                    </article>
+                </div>
+
+                <div class="card modular">
+                    <label for="expand-check3" class="expand-icon">+/-
+                        <a id="anchor-card3"></a>
+                    </label>
+                    <input type="checkbox" id="expand-check3" />
+                    <article class="expand" id="card3">
+                        <h2>Outdoors</h2>
+                        <p>
+                            As much as I love engrossing myself in designing and building things on screens, nature is
+                            where I nourish myself physically.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
+                            interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue
+                            auctor, at
+                            aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
+                            Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
+                            euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
+                            ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
+                            Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
+                        </p>
+
+                        <form action="./photography.html">
+                            <input type="submit" value="Image gallery" class="button" />
+                        </form>
+                    </article>
+                </div>
             </div>
 
         </section>
