--- a/journal-v2.html
+++ b/journal-v2.html
@@ -47,7 +47,7 @@
     </label>
 
     <!-- NAV LIST MENU -->
-    <nav>
+    <nav id="nav-main">
         <ul id="nav-list">
             <li><a href="./about-v2.html">about</a></li>
             <li><a href="./code-v2.html">code</a></li>
@@ -65,7 +65,7 @@
 
             <!-- PAGE CONTENTS DROPDOWN -->
             <div class="wide-cont">
-                <section class="dropdown-cont">
+                <nav class="nav-sub">
                     <label for="dropdown-check" class="dropdown-icon">
                         <a>contents</a>
                         <br>
@@ -79,7 +79,7 @@
                         <li><a href="#anchor-card4">Responsive design</a></li>
                         <li><a href="#anchor-card5">Rainbow circles</a></li>
                     </ul>
-                </section>
+                </nav>
             </div>
 
             <div class="card article">
