--- a/contact-v2.html
+++ b/contact-v2.html
@@ -45,7 +45,7 @@
         </span>
     </label>
     <!-- NAV LIST MENU -->
-    <nav>
+    <nav id="nav-main">
         <ul id="nav-list">
             <li><a href="./about-v2.html">about</a></li>
             <li><a href="./code-v2.html">code</a></li>
