--- a/personal-v2.html
+++ b/personal-v2.html
@@ -47,7 +47,7 @@
     </label>
 
     <!-- NAV LIST MENU -->
-    <nav>
+    <nav id="nav-main">
         <ul id="nav-list">
             <li><a href="./about-v2.html">about</a></li>
             <li><a href="./code-v2.html">code</a></li>
@@ -65,7 +65,7 @@
 
             <!-- PAGE CONTENTS DROPDOWN -->
             <div class="wide-cont">
-                <div class="dropdown-cont">
+                <nav class="nav-sub">
                     <label for="dropdown-check" class="dropdown-icon">
                         <a>contents</a>
                         <br>
@@ -76,7 +76,7 @@
                         <li><a href="#anchor-card1">Music</a></li>
                         <li><a href="#anchor-card2">Photography</a></li>
                     </ul>
-                </div>
+                </nav>
             </div>
 
             <div class="column">
