--- a/BOILERPLATE.html
+++ b/BOILERPLATE.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
   <!-- FONT-AWESOME ICONS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -24,7 +25,7 @@
   <header>
     <!-- HEADER TITLE+CIRCLE -->
     <div id="header-cont">
-      <h1 id="header-text">tané</h1>
+      <h1 id="header-text">lanruoj</h1>
       <div id="header-circle"></div>
     </div>
   </header>
