--- a/personal-v2.html
+++ b/personal-v2.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
     <!-- FONT-AWESOME ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -24,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">tané</h1>
+            <h1 id="header-text">lanruoj</h1>
             <div id="header-circle"></div>
         </div>
     </header>
@@ -75,17 +76,18 @@
                     <ul class="dropdown-list card">
                         <li><a href="#anchor-card1">Music</a></li>
                         <li><a href="#anchor-card2">Photography</a></li>
+                        <li><a href="#anchor-card3">Outdoors</a></li>
+                        <li><a href="#anchor-card4">Travel</a></li>
                     </ul>
                 </nav>
             </div>
 
-            <div class="column">
                 <div class="card modular">
                     <label for="expand-check1" class="expand-icon">+/-
                         <a id="anchor-card1"></a>
                     </label>
                     <input type="checkbox" id="expand-check1" />
-                    <article id="card1">
+                    <article class="expand" id="card1">
                         <h2>Music</h2>
                         <p>
                             Where would the world be without music? It has guided me, comforted me, driven me and has
@@ -95,7 +97,7 @@
                             highschool, I've been continually exploring and discovering new music and sharing it to
                             whoever would listen (not many, as it turns out).
                         </p>
-                        <ul>
+                        <ul class="card-list">
                             <li>
                                 <h3>Stolen Violin, <i>Temperate Touch, Tropical Tears (2013)</i></h3>
                                 <img src="https://f4.bcbits.com/img/a3417893724_16.jpg" alt="Stolen Violin">
@@ -134,14 +136,9 @@
                             </li>
                         </ul>
 
-                        <!-- <form action="./music.html">
-                        <input type="submit" value="My favourite albums" class="button" />
-                    </form> -->
                     </article>
                 </div>
-            </div>
 
-            <div class="column">
                 <div class="card modular">
                     <label for="expand-check2" class="expand-icon">+/-
                         <a id="anchor-card2"></a>
@@ -198,8 +195,33 @@
                         </form>
                     </article>
                 </div>
-            </div>
 
+                <div class="card modular">
+                    <label for="expand-check4" class="expand-icon">+/-
+                        <a id="anchor-card4"></a>
+                    </label>
+                    <input type="checkbox" id="expand-check4" />
+                    <article class="expand" id="card4">
+                        <h2>Travel</h2>
+                        <p>
+                            There is nothing quite like throwing yourself into a completely new and foreign environment for learning new things about yourself and finding new ways of interpreting the world.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
+                            interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue
+                            auctor, at
+                            aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
+                            Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
+                            euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
+                            ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
+                            Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
+                        </p>
+
+                        <form action="./photography.html">
+                            <input type="submit" value="Image gallery" class="button" />
+                        </form>
+                    </article>
+                </div>
         </section>
     </main>
     <!-- FOOTER -->
