--- a/resume.html
+++ b/resume.html
@@ -2,82 +2,82 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <!-- FONTS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
-  <!-- FONT-AWESOME ICONS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./tidy.css" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
+    <!-- FONT-AWESOME ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Resume / TK</title>
+    <title>Resume / TK</title>
 </head>
 
 <body>
-  <header>
-    <h1>portfolio</h1>
-    <div id="head-circle"></div>
-  </header>
-  <!-- MOBILE MENU -->
-  <nav id="nav-cont-mob">
-    <input type="checkbox" id="nav-button-mob" />
-    <label for="nav-button-mob"><span class="fa-solid fa-bars" id="nav-icon-mob"></span></label>
-    <label for="nav-button-mob"><span id="blank-span">Me<br />nu</span></label>
-    <div id="nav-links-mob">
-      <ul class="nav-list" id="nav-list-mob">
-        <li><a href="./about.html">about</a></li>
-        <li><a href="./code.html">code</a></li>
-        <!-- <li><a href="./personal.html">personal</a></li> -->
-        <li><a href="./journal.html">journal</a></li>
-        <li><a href="./resume.html">resume</a></li>
-        <li><a href="./contact.html">contact</a></li>
-      </ul>
-    </div>
-  </nav>
-  <!-- DESKTOP MENU -->
-  <input type="checkbox" id="nav-button-desk" />
-  <label for="nav-button-desk" id="menu-text-desk">menu<br /><span class="fa-solid fa-arrows-alt-h"
-      id="arrow"></span></label>
-  <nav id="nav-cont-desk">
-    <ul class="nav-list" id="nav-list-desk">
-      <li><a href="./about.html">about</a></li>
-      <li><a href="./code.html">code</a></li>
-      <!-- <li><a href="./personal.html">personal</a></li> -->
-      <li><a href="./journal.html">journal</a></li>
-      <li><a href="./resume.html">resume</a></li>
-      <li><a href="./contact.html">contact</a></li>
-      <li><img id="portrait" src="./img/archie.png" alt="Portrait" /></li>
-    </ul>
-  </nav>
+    <!-- HEADER MODULE -->
+    <header>
+        <!-- HEADER TITLE+CIRCLE -->
+        <div id="header-cont">
+            <h1 id="header-text">lanruoj</h1>
+            <div id="header-circle"></div>
+        </div>
+    </header>
 
+    <!-- BUTTON/ICON FOR NAV MENU -->
+    <input type="checkbox" id="nav-check" />
+    <label for="nav-check" id="nav-button">
+        <!-- MOBILE BUTTON -->
+        <span class="fa-solid fa-bars" id="mob-nav-icon">
+        </span>
+        <!-- DESKTOP BUTTON -->
+        <span id="desk-nav-icon">
+            <span id="menu-text">menu</span>
+            <span id="arrows">
+                <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
+                    class="fa-solid fa-long-arrow-alt-right arrow"></i>
+            </span>
+        </span>
+    </label>
+    <!-- NAV LIST MENU -->
+    <nav id="nav-main">
+        <ul id="nav-list">
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./code.html">code</a></li>
+            <li><a href="./personal.html">personal</a></li>
+            <li><a href="./journal.html">journal</a></li>
+            <li><a href="./resume.html">resume</a></li>
+            <li><a href="./contact.html">contact</a></li>
+        </ul>
+    </nav>
 
+    <main>
+        <section class="content">
+            <!-- PAGE SUBHEADING -->
+            <h2 id="page-sub">resume</h2>
 
-  <main>
-    <h2 class="desk-page-sub">
-      resume . resume . resume . resume . resume . resume . resume . resume .
-      resume
-    </h2>
-    <div class="download-button">
-      <a class="button" href="./img/resume/resume-template.pdf" download>
-        <p>Download resume</p>
-      </a>
-    </div>
-    <div class="card" id="resume-cont">
-      <iframe id="resume-iframe" src="./img/resume-template.pdf#zoom=25" height="50" width="50"></iframe>
-    </div>
-  </main>
-  <footer>
-    <p>&copy; Tané Kaio, 2022</p>
-    <form action="./contact.html">
-      <input type="submit" value="Contact me" id="contact-button" />
-    </form>
-  </footer>
+            <article class="card doc">
+                <h2>Resume</h2>
+                <iframe src="./img/resume-template.pdf"></iframe>
+            </article>
+
+            <div class="wide-cont">
+                <a class="button" href="./img/resume-template.pdf" download>
+                    Download
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p id="footer-text">&copy; Tané Kaio, 2022</p>
+    </footer>
 </body>
 
 </html>
