--- a/index.html
+++ b/index.html
@@ -2,34 +2,80 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <!-- FONTS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
-  <!-- FONT-AWESOME ICONS -->l
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./tidy.css" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
+    <!-- FONT-AWESOME ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Home / TK</title>
+    <title>Personal / TK</title>
 </head>
 
 <body>
-  <main>
-    <section class="page">
-        <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
-    </section>
-    <div class="button-cont">
-        <form action="./about.html">
-            <input type="submit" value="Who am I?" class="button" />
-        </form>
-    </div>
-  </main>
+    <!-- HEADER MODULE -->
+    <header>
+        <!-- HEADER TITLE+CIRCLE -->
+        <div id="header-cont">
+            <h1 id="header-text">lanruoj</h1>
+            <div id="header-circle"></div>
+        </div>
+    </header>
+    <!-- MOBILE NAV MENU -->
+
+    <!-- BUTTON/ICON FOR NAV MENU -->
+    <input type="checkbox" id="nav-check" />
+    <label for="nav-check" id="nav-button">
+        <!-- MOBILE BUTTON -->
+        <span class="fa-solid fa-bars" id="mob-nav-icon">
+        </span>
+        <!-- DESKTOP BUTTON -->
+        <span id="desk-nav-icon">
+            <span id="menu-text">menu</span>
+            <span id="arrows">
+                <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
+                    class="fa-solid fa-long-arrow-alt-right arrow"></i>
+            </span>
+        </span>
+    </label>
+
+    <!-- NAV LIST MENU -->
+    <nav id="nav-main">
+        <ul id="nav-list">
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./code.html">code</a></li>
+            <li><a href="./personal.html">personal</a></li>
+            <li><a href="./journal.html">journal</a></li>
+            <li><a href="./resume.html">resume</a></li>
+            <li><a href="./contact.html">contact</a></li>
+        </ul>
+    </nav>
+    <!-- MAIN CONTENT -->
+    <main>
+        <section class="content" id="home">
+
+            <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
+
+            <div class="cont">
+                <form action="./about.html">
+                    <input type="submit" value="Enter" class="button" />
+                </form>
+            </div>
+        </section>
+
+    </main>
+    <!-- FOOTER -->
+    <footer>
+        <p id="footer-text">&copy; Tané Kaio, 2022</p>
+    </footer>
 </body>
 
 </html>
