Example page added for slide deck screenshots

--- a/EXAMPLE.html
+++ b/EXAMPLE.html
@@ -17,7 +17,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Personal / TK</title>
+    <title>EXAMPLE</title>
 </head>
 
 <body>
@@ -60,19 +60,17 @@
     </nav>
     <!-- MAIN CONTENT -->
     <main>
-        <section class="content" id="home">
+        <section class="content">
 
-            <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
+            <form action="#">
+                <input type="submit" value="Button" class="button">
+            </form>
+            <form action="#">
+                <input type="submit" value="Hover" class="button">
+            </form>
 
-            <div class="cont">
-                <form action="./about.html">
-                    <input type="submit" value="Enter" class="button" />
-                </form>
-            </div>
         </section>
-
     </main>
-    <!-- FOOTER -->
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
