--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">lanruoj</h1>
+            <h1 id="header-text">t. kaio</h1>
             <div id="header-circle"></div>
         </div>
     </header>
@@ -63,11 +63,11 @@
             <h2 id="page-sub">about</h2>
 
             <figure id="about-img-cont">
-                <img id="about-img" class="img" src="./img/nz-port.jpg" alt="An image of me">
+                <img id="about-img" src="./img/nz-port.jpg" alt="An image of me">
             </figure>
 
             <div class="cont">
-                <article class="card article">
+                <article class="top-card article">
                     <h2>About me</h2>
                     <p>
                         <em>Hey there!</em>
