--- a/code.html
+++ b/code.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">lanruoj</h1>
+            <h1 id="header-text">t. kaio</h1>
             <div id="header-circle"></div>
         </div>
     </header>
@@ -62,6 +62,11 @@
             <!-- PAGE SUBHEADING -->
             <h2 id="page-sub">code</h2>
 
+            <div class="top-card">
+                <h2>Code projects</h2>
+                <p>Learning by doing is perhaps the most effective way for me to learn new things. In the short amount of time that I've been coding, I've already embarked on several projects and have been challenged to create solutions to problems. Below is an ever-growing showcase of some of them.</p>
+            </div>
+
             <div class="wide-cont">
                 <nav class="nav-sub">
                     <label for="dropdown-check" class="dropdown-icon">
@@ -70,7 +75,7 @@
                         <i class="fa-solid fa-angle-double-down down-arrows"></i>
                     </label>
                     <input type="checkbox" id="dropdown-check" />
-                    <ul class="dropdown-list card">
+                    <ul class="dropdown-list">
                         <li><a href="#anchor-card1">Portfolio</a></li>
                         <li><a href="#anchor-card2">Band webpage</a></li>
                         <li><a href="#anchor-card3">Checkbox hack</a></li>
@@ -80,7 +85,7 @@
                 </nav>
             </div>
 
-            <article class="card modular">
+            <article class="card modular gallery">
                 <span>
                 <a id="anchor-card1"></a>
                 </span>
@@ -96,7 +101,7 @@
                 </form>
             </article>
 
-            <article class="card modular">
+            <article class="card modular gallery">
                 <span>
                     <a id="anchor-card2"></a>
                     </span>
@@ -112,7 +117,7 @@
                 </form>
             </article>
 
-            <article class="card modular">
+            <article class="card modular gallery">
                 <span>
                     <a id="anchor-card3"></a>
                     </span>
@@ -130,7 +135,7 @@
                 </form>
             </article>
 
-            <article class="card modular">
+            <article class="card modular gallery">
                 <span>
                     <a id="anchor-card4"></a>
                     </span>
