--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">lanruoj</h1>
+            <h1 id="header-text">t. kaio</h1>
             <div id="header-circle"></div>
         </div>
     </header>
