--- a/journal.html
+++ b/journal.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">lanruoj</h1>
+            <h1 id="header-text">t. kaio</h1>
             <div id="header-circle"></div>
         </div>
     </header>
@@ -73,7 +73,7 @@
                         <i class="fa-solid fa-angle-double-down down-arrows"></i>
                     </label>
                     <input type="checkbox" id="dropdown-check" />
-                    <ul class="dropdown-list card">
+                    <ul class="dropdown-list">
                         <li><a href="#anchor-card1">Portfolio</a></li>
                         <li><a href="#anchor-card2">Band webpage</a></li>
                         <li><a href="#anchor-card3">Checkbox hack</a></li>
