--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">lanruoj</h1>
+            <h1 id="header-text">t. kaio</h1>
             <div id="header-circle"></div>
         </div>
     </header>
@@ -64,6 +64,12 @@
             <!-- PAGE SUBHEADING -->
             <h2 id="page-sub">personal</h2>
 
+
+            <div class="top-card">
+                <h2>Personal interests</h2>
+                <p>As much as we try, I believe it's impossible to <em>truly</em> seperate our professional and personal worlds, as they always seem to have an influence on each other. Below are some of the things that interest me in my spare time and inform how I approach my professional work.</p>
+            </div>
+
             <!-- PAGE CONTENTS DROPDOWN -->
             <div class="wide-cont">
                 <nav class="nav-sub">
@@ -73,7 +79,7 @@
                         <i class="fa-solid fa-angle-double-down down-arrows"></i>
                     </label>
                     <input type="checkbox" id="dropdown-check" />
-                    <ul class="dropdown-list card">
+                    <ul class="dropdown-list">
                         <li><a href="#anchor-card1">Music</a></li>
                         <li><a href="#anchor-card2">Photography</a></li>
                         <li><a href="#anchor-card3">Outdoors</a></li>
@@ -97,6 +103,7 @@
                             highschool, I've been continually exploring and discovering new music and sharing it to
                             whoever would listen (not many, as it turns out).
                         </p>
+                        <p>Here is a list of <em>some</em> of my favourite albums:</p>
                         <ul class="card-list">
                             <li>
                                 <h3>Stolen Violin, <i>Temperate Touch, Tropical Tears (2013)</i></h3>
