About to try adding personal into about page

--- a/about.html
+++ b/about.html
@@ -64,6 +64,7 @@
 
             <figure id="about-img-cont">
                 <img id="about-img" src="./img/nz-port.jpg" alt="An image of me">
+                <figcaption>Somewhere on the road in New Zealand</figcaption>
             </figure>
 
             <div class="cont">
